--- a/Code/adrian/explore.html
+++ b/Code/adrian/explore.html
@@ -18,7 +18,7 @@
 
             <nav>
                 <ul>
-                    <li class="nav-li"><a href="/FINAL PROJECT/Code/home.html">HOME</a></li>
+                    <li class="nav-li"><a href="/FINAL PROJECT/Code/index.html">HOME</a></li>
                     <li class="nav-li">
                         <a href="#">OUR DUO</a>
                         <ul class="sub-nav">
@@ -121,8 +121,8 @@
                 <div class="footer-nav">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="/FINAL PROJECT/Code/home.html">Home</a></li>
-                        <li><a href="/FINAL PROJECT/Code/home.html">Our Duo</a></li>
+                        <li><a href="/FINAL PROJECT/Code/index.html">Home</a></li>
+                        <li><a href="/FINAL PROJECT/Code/index.html">Our Duo</a></li>
                         <li><a href="/FINAL PROJECT/Code/project.html">Projects</a></li>
                         <li><a href="#Contact">Contact</a></li>
                     </ul>
