--- a/Code/joshua/joshua.html
+++ b/Code/joshua/joshua.html
@@ -23,7 +23,7 @@
 
       <nav>
         <ul>
-          <li class="nav-li"><a href="../home.html">HOME</a></li>
+          <li class="nav-li"><a href="../index.html">HOME</a></li>
           <li class="nav-li">
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
@@ -139,8 +139,8 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="/FINAL PROJECT/Code/home.html">Home</a></li>
-            <li><a href="/FINAL PROJECT/Code/home.html">Our Duo</a></li>
+            <li><a href="/FINAL PROJECT/Code/index.html">Home</a></li>
+            <li><a href="/FINAL PROJECT/Code/index.html">Our Duo</a></li>
             <li><a href="/FINAL PROJECT/Code/project.html">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
