--- a/Code/project.html
+++ b/Code/project.html
@@ -23,7 +23,7 @@
 
       <nav>
         <ul>
-          <li class="nav-li"><a href="home.html">HOME</a></li>
+          <li class="nav-li"><a href="index.html">HOME</a></li>
           <li class="nav-li">
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
@@ -233,8 +233,8 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="home.html">Our Duo</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our Duo</a></li>
             <li><a href="project.html">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
