--- a/Code/project.html
+++ b/Code/project.html
@@ -28,13 +28,13 @@
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
               <li class="sub-nav-li">
-                <a href="../Code/adrian/adrian.html">About Adrian</a>
+                <a href="./adrian/adrian.html">About Adrian</a>
               </li>
               <li class="sub-nav-li"><a href="#">About Joshua </a></li>
             </ul>
           </li>
           <li class="nav-li">
-            <a href="/FINAL PROJECT/Code/project.html">PROJECTS</a>
+            <a href="project.html">PROJECTS</a>
           </li>
           <li class="nav-li"><a href="#Contact">CONTACT</a></li>
         </ul>
