--- a/Code/adrian/adrian.html
+++ b/Code/adrian/adrian.html
@@ -23,12 +23,14 @@
 
       <nav>
         <ul>
-          <li class="nav-li"><a href="../home.html">HOME</a></li>
+          <li class="nav-li"><a href="../index.html">HOME</a></li>
           <li class="nav-li">
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
               <li class="sub-nav-li"><a href="adrian.html">About Adrian</a></li>
-              <li class="sub-nav-li"><a href="#">About Legado</a></li>
+              <li class="sub-nav-li">
+                <a href="../joshua/joshua.html">About Legado</a>
+              </li>
             </ul>
           </li>
           <li class="nav-li"><a href="project.html">PROJECTS</a></li>
