--- a/Code/joshua/joshua.html
+++ b/Code/joshua/joshua.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="project-button-container">
-              <a href="../project.html" class="project-button">
+              <a href="../index.html" class="project-button">
                 <span>View My Projects</span>
                 <i class="fas fa-arrow-right"></i>
               </a>
