--- a/Code/project.html
+++ b/Code/project.html
@@ -23,7 +23,7 @@
 
       <nav>
         <ul>
-          <li class="nav-li"><a href="home.html">HOME</a></li>
+          <li class="nav-li"><a href="index.html">HOME</a></li>
           <li class="nav-li">
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
