--- a/Code/adrian/adrian.html
+++ b/Code/adrian/adrian.html
@@ -18,12 +18,12 @@
   <body>
     <header>
       <div class="title">
-        <h1>Bembang theory</h1>
+        <h1>Adrian</h1>
       </div>
 
       <nav>
         <ul>
-          <li class="nav-li"><a href="../index.html">HOME</a></li>
+          <li class="nav-li"><a href="../../index.html">HOME</a></li>
           <li class="nav-li">
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
@@ -34,6 +34,9 @@
             </ul>
           </li>
           <li class="nav-li"><a href="project.html">PROJECTS</a></li>
+          <li><a href="./services.html">SERVICES</a></li>
+          <li><a href="./skills.html">SKILLS</a></li>
+          <li><a href="./about.html">About Me</a></li>
           <li class="nav-li"><a href="#Contact">CONTACT</a></li>
         </ul>
       </nav>
@@ -118,7 +121,7 @@
           <div class="portfolio-showcase personal-photo">
             <div class="profile-image">
               <img
-                src="/FINAL PROJECT/Images/ian-img.jpg"
+                src="../../Images/ian-img.jpg"
                 alt="Adrian Tablada - Full-Stack Developer"
               />
               <div class="image-caption">
@@ -140,9 +143,9 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="/FINAL PROJECT/Code/home.html">Home</a></li>
-            <li><a href="/FINAL PROJECT/Code/home.html">Our Duo</a></li>
-            <li><a href="/FINAL PROJECT/Code/project.html">Projects</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../index.html">Our Duo</a></li>
+            <li><a href="../project.html">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
         </div>
