--- a/Code/joshua/project.html
+++ b/Code/joshua/project.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adrian Projects</title>
+    <title>Joshua Projects</title>
     <link rel="stylesheet" href="project.css" />
     <link
       rel="stylesheet"
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="title">
-        <h1>Adrian Projects</h1>
+        <h1>Joshua Projects</h1>
       </div>
 
       <nav>
@@ -27,9 +27,11 @@
           <li class="nav-li">
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
-              <li class="sub-nav-li"><a href="adrian.html">About Adrian</a></li>
               <li class="sub-nav-li">
-                <a href="../joshua/joshua.html">About Legado</a>
+                <a href="../adrian/adrian.html">About Adrian</a>
+              </li>
+              <li class="sub-nav-li">
+                <a href="joshua.html">About Legado</a>
               </li>
             </ul>
           </li>
@@ -45,24 +47,30 @@
     <main>
       <section>
         <div class="silakbay-project">
-          <h2>SILAKBAY PROJECT</h2>
+          <h2>PNC WEBSITE</h2>
           <div class="slider-image">
             <div class="slider-container">
               <div class="slide">
                 <img
-                  src="../../Images/silakbay-project1.png"
+                  src="../../Images/legado-project1.png"
                   alt="Silakbay Project 1"
                 />
               </div>
               <div class="slide">
                 <img
-                  src="../../Images/silakbay-project2.png"
+                  src="../../Images/legado-project2.png"
                   alt="Silakbay Project 2"
                 />
               </div>
               <div class="slide">
                 <img
-                  src="../../Images/silakbay-project3.png"
+                  src="../../Images/legado-project3.png"
+                  alt="Silakbay Project 3"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="../../Images/legado-project4.png"
                   alt="Silakbay Project 3"
                 />
               </div>
@@ -80,21 +88,27 @@
         </div>
 
         <div class="clone-project">
-          <h2>CLONE FIRST CABUYAO WEBSITE PROJECT</h2>
+          <h2>ECOMMERCE WEBSITE</h2>
 
           <div class="slider-image">
             <div class="slider-container">
               <div class="slide">
-                <img src="../../Images/clone1.png" alt="Clone  1" />
+                <img src="../../Images/legado-next1.png" alt="Clone  1" />
               </div>
               <div class="slide">
-                <img src="../../Images/clone2.png" alt="Clone 2" />
+                <img src="../../Images/legado-next2.png" alt="Clone 2" />
               </div>
               <div class="slide">
-                <img src="../../Images/clone3.png" alt="Clone Project 3" />
+                <img
+                  src="../../Images/legado-next3.png"
+                  alt="Clone Project 3"
+                />
               </div>
               <div class="slide">
-                <img src="../../Images/clone4.png" alt="Clone Project 4" />
+                <img
+                  src="../../Images/legado-next4.png"
+                  alt="Clone Project 4"
+                />
               </div>
             </div>
 
@@ -153,7 +167,7 @@
     <footer>
       <div id="Contact" class="footer-container">
         <div class="footer-logo">
-          <h3>Adrian Tablada</h3>
+          <h3>Joshua Legado</h3>
           <p>Contact me if you want to a beautiful systems</p>
         </div>
 
@@ -174,13 +188,13 @@
             <p>
               Email:
               <a href="mailto:Bembangtheory@gmail.com"
-                >tabladaadrian37@gmail.com</a
+                >legadojoshua33@gmail.com</a
               >
             </p>
           </div>
           <div class="contact-item">
             <i class="fas fa-phone"></i>
-            <p>Phone: +63 921345432</p>
+            <p>Phone: +63 932432234</p>
           </div>
           <div class="contact-item">
             <i class="fas fa-map-marker-alt"></i>
@@ -191,16 +205,14 @@
         <div class="footer-socials">
           <h3>Follow Me</h3>
           <div class="social-links">
-            <a href="https://github.com/eeyaann06"
-              ><i class="fab fa-github"></i
-            ></a>
-            <a href="https://www.facebook.com/adrian.tablada.5"
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/joshualegado008"
               ><i class="fab fa-facebook"></i
             ></a>
-            <a href="https://www.youtube.com/@Ignia06"
+            <a href="https://www.youtube.com/@LegadoJoshua"
               ><i class="fab fa-youtube"></i
             ></a>
-            <a href="https://www.instagram.com/_ieyann06/"
+            <a href="https://www.instagram.com/frankoshopp_ig/"
               ><i class="fab fa-instagram"></i
             ></a>
           </div>
