--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME: Legado & Tablada Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Code/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -23,20 +23,22 @@
 
       <nav>
         <ul>
-          <li class="nav-li"><a href="home.html">Home</a></li>
+          <li class="nav-li"><a href="index.html">HOME</a></li>
           <li class="nav-li">
-            <a href="#">Our Duo</a>
+            <a href="#">OUR DUO</a>
             <ul class="sub-nav">
               <li class="sub-nav-li">
-                <a href="./adrian/adrian.html">About Adrian</a>
+                <a href="./Code/adrian/adrian.html">About Adrian</a>
               </li>
               <li class="sub-nav-li">
-                <a href="./joshua/joshua.html">About Legado</a>
+                <a href="./Code/joshua/joshua.html">About Legado</a>
               </li>
             </ul>
           </li>
-          <li class="nav-li"><a href="project.html">Projects</a></li>
-          <li class="nav-li"><a href="#Contact">Contact</a></li>
+          <li class="nav-li"><a href="./Code/project.html">PROJECTS</a></li>
+          <li><a href="./Code/services.html">SERVICES</a></li>
+          <li><a href="./Code/skills.html">SKILLS</a></li>
+          <li class="nav-li"><a href="#Contact">CONTACT</a></li>
         </ul>
       </nav>
     </header>
@@ -205,9 +207,9 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="home.html">Our Duo</a></li>
-            <li><a href="project.html">Projects</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our Duo</a></li>
+            <li><a href="./Code/project.html">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
         </div>
