--- a/Code/joshua/joshua.html
+++ b/Code/joshua/joshua.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adrian Porfolio</title>
+    <title>Joshua Porfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -18,12 +18,12 @@
   <body>
     <header>
       <div class="title">
-        <h1>Bembang theory</h1>
+        <h1>Joshua</h1>
       </div>
 
       <nav>
         <ul>
-          <li class="nav-li"><a href="../home.html">HOME</a></li>
+          <li class="nav-li"><a href="../../index.html">HOME</a></li>
           <li class="nav-li">
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
@@ -31,11 +31,14 @@
                 <a href="../adrian/adrian.html">About Adrian</a>
               </li>
               <li class="sub-nav-li">
-                <a href="./joshua.html">About Legado</a>
+                <a href="joshua.html">About Legado</a>
               </li>
             </ul>
           </li>
-          <li class="nav-li"><a href="../project.html">PROJECTS</a></li>
+          <li class="nav-li"><a href="project.html">PROJECTS</a></li>
+          <li><a href="./services.html">SERVICES</a></li>
+          <li><a href="./skills.html">SKILLS</a></li>
+          <li><a href="./about.html">About Me</a></li>
           <li class="nav-li"><a href="#Contact">CONTACT</a></li>
         </ul>
       </nav>
@@ -64,7 +67,7 @@
             </div>
 
             <div class="project-button-container">
-              <a href="../index.html" class="project-button">
+              <a href="project.html" class="project-button">
                 <span>View My Projects</span>
                 <i class="fas fa-arrow-right"></i>
               </a>
@@ -117,7 +120,7 @@
           <div class="portfolio-showcase personal-photo">
             <div class="profile-image">
               <img
-                src="/FINAL PROJECT/Images/dfgdfdgdgd.jpg"
+                src="../../Images/dfgdfdgdgd.jpg"
                 alt="Joshua Legado - UX/UI Designer & Full-Stack Developer"
               />
               <div class="image-caption">
@@ -139,9 +142,9 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="/FINAL PROJECT/Code/home.html">Home</a></li>
-            <li><a href="/FINAL PROJECT/Code/home.html">Our Duo</a></li>
-            <li><a href="/FINAL PROJECT/Code/project.html">Projects</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../index.html">Our Duo</a></li>
+            <li><a href="../project.html">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
         </div>
