--- a/Code/project.html
+++ b/Code/project.html
@@ -18,24 +18,26 @@
   <body>
     <header>
       <div class="title">
-        <h1>Bembang Projects</h1>
+        <h1>Bembang theory</h1>
       </div>
 
       <nav>
         <ul>
-          <li class="nav-li"><a href="index.html">HOME</a></li>
+          <li class="nav-li"><a href="../index.html">HOME</a></li>
           <li class="nav-li">
             <a href="#">OUR DUO</a>
             <ul class="sub-nav">
               <li class="sub-nav-li">
-                <a href="../Code/adrian/adrian.html">About Adrian</a>
+                <a href="./adrian/adrian.html">About Adrian</a>
               </li>
-              <li class="sub-nav-li"><a href="#">About Joshua </a></li>
+              <li class="sub-nav-li">
+                <a href="./joshua/joshua.html">About Legado</a>
+              </li>
             </ul>
           </li>
-          <li class="nav-li">
-            <a href="/FINAL PROJECT/Code/project.html">PROJECTS</a>
-          </li>
+          <li class="nav-li"><a href="project.html">PROJECTS</a></li>
+          <li><a href="services.html">SERVICES</a></li>
+          <li><a href="./skills.html">SKILLS</a></li>
           <li class="nav-li"><a href="#Contact">CONTACT</a></li>
         </ul>
       </nav>
@@ -233,8 +235,8 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="home.html">Our Duo</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Our Duo</a></li>
             <li><a href="project.html">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
